<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>unique_identifier_cpp</name>
  <version>1.0.6</version>
  <description>
    ROS Python and C++ interfaces for universally unique identifiers.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>BSD</license>
  <url>https://github.com/ros2/unique_identifier</url>

  <author>Jack O'Quin</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>unique_identifier_msgs</build_depend>

  <exec_depend>unique_identifier_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
