<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>unique_identifier_python</name>
  <version>1.0.6</version>
  <description>
    Python API for working with universally unique identifiers in ROS.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>BSD</license>
  <url>https://github.com/ros2/unique_identifier</url>

  <author>Jack O'Quin</author>

  <build_depend>unique_identifier_msgs</build_depend>

  <exec_depend>unique_identifier_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
